--- a/config/config.properties
+++ b/config/config.properties
@@ -1,3 +1,3 @@
-repositorio.implementacao=memoria
+repositorio.implementacao=postgres
 # repositorio.implementacao (memoria,postgres)
 log.implementacao=console
