CYRILLO_IMPROVE_0008 Simular teste de timeout no banco de dados para ver como a aplicação se comporta

--- a/config/config.properties
+++ b/config/config.properties
@@ -1,3 +1,4 @@
 repositorio.implementacao=postgres
+repositorio.timeout=1
 # repositorio.implementacao (memoria,postgres)
 log.implementacao=console
