--- a/docker/docker_micros/config/config.properties
+++ b/docker/docker_micros/config/config.properties
@@ -1,3 +1,4 @@
 repositorio.implementacao=postgres
+repositorio.timeout=1
 # repositorio.implementacao (memoria,postgres)
 log.implementacao=console
