--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,14 @@ plugins {
     id 'idea'
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.cyrillo.ativo.Inicializacao'
+        )
+    }
+}
+
 group 'com.cyrillo.investpess.ativo'
 version '1.0-SNAPSHOT'
 
