--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -33,3 +33,18 @@ services:
       - banco
     depends_on:
       - db
+  jaeger:
+    image: jaegertracing/all-in-one:1.29
+    container_name: jaeger
+    networks:
+      - microsserv
+    ports:
+      - 5775:5775/udp
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 5778:5778
+      - 16686:16686
+      - 14250:14250
+      - 14268:14268
+      - 14269:14269
+      - 9411:9411
