--- a/build.gradle
+++ b/build.gradle
@@ -48,10 +48,11 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.22'
     implementation group: 'io.opentracing.contrib', name: 'opentracing-spring-jaeger-web-starter', version: '3.2.2'
+    implementation group: 'io.jaegertracing', name: 'jaeger-core', version: '1.7.0'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.32'
-}
 
+}
 
 
 // if you have source imports issues, add the below
