--- a/config/config.properties
+++ b/config/config.properties
@@ -2,3 +2,13 @@ repositorio.implementacao=postgres
 repositorio.timeout=1
 # repositorio.implementacao (memoria,postgres)
 log.implementacao=console
+// Jaeger config
+jaeger.reporter_host=localhost
+jaeger.reporter_port=5775
+############## jaeger #################
+opentracing.jaeger.service-name=bff-ativos
+opentracing.jaeger.log-spans=true
+opentracing.jaeger.udp-sender.host=localhost
+opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.sampler-type=const
+opentracing.jaeger.sampler-param=1
