adequação do docker

--- a/config/config.properties
+++ b/config/config.properties
@@ -3,7 +3,7 @@ repositorio.timeout=1
 # repositorio.implementacao (memoria,postgres)
 log.implementacao=console
 // Jaeger config
-jaeger.reporter_host=localhost
+jaeger.reporter_host=jaeger
 #jaeger.reporter_host=jaeger // se roda dentro de um container service no docker, precisa apontar para o container de nome jaeger, em vez do enderelo localhost
 jaeger.reporter_port=5775
 ############## jaeger #################
